fixed z-index

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
-    z-index: 1000;
+    z-index: 10000;
     transition: 0.6s ease-in;
     background-color: rgba(135,206,235,0); 
 }
